--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,19 +9,10 @@ jobs:
       - uses: actions/checkout@v2
       - uses: denoland/setup-deno@v1.0.0
         with:
-          deno-version: v1.x # Run with latest stable Deno.
-                # Check if the code is formatted according to Deno's default
-      # formatting conventions.
+          deno-version: v1.x
+
       - run: deno fmt --check
 
-      # Scan the code for syntax errors and style issues. If
-      # you want to use a custom linter configuration you can add a configuration file with --config <myconfig>
       - run: deno lint
 
-      # Run all test files in the repository and collect code coverage. The example
-      # runs with all permissions, but it is recommended to run with the minimal permissions your program needs (for example --allow-read).
-      - run: deno test --allow-all --unstable --coverage cov/
-
-      # This generates a report from the collected coverage in `deno test --coverage`. It is
-      # stored as a .lcov file which integrates well with services such as Codecov, Coveralls and Travis CI.
-      - run: deno coverage --lcov cov/ > cov.lcov
+      - run: deno test --allow-all --unstable
